[metadata]
name=pyava-quiark
version=0.1
description=Python tools for working with Avalanche blockchain
url=https://github.com/quiark/pyava
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires= >=3.6
install_requires=
  requests >= 2.25.0
  base58 >= 2.1.0
  bech32 >= 1.2.0

